--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.0"
+    "react-redux": "^7.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.0.0",
